# GWAI

localization/: .gitignore  Cargo.toml  GROWI_ORACLE.md  IMPLEMENTATION_PLAN.md  README.md  TEMP-bundle-issues.md  gw_pn_givental_rust_implementation_spec.md
localization/docs/: acceptance-testing.md  architecture.md  lessons.md  oracle-coverage.md  oracle-provenance.tsv  performance-frontiers.md  performance-tuning-plan.md  virasoro.md
localization/scripts/: README.md  acceptance-tests.json  acceptance_tests.py  collab_twisted_p2.py  graph-stats.rs  perf_frontiers.py  run-acceptance-tests.sh  run-graph-stats.sh  run-hotspot-profile.sh  run-perf-frontiers.sh  run-twisted-raw-values.sh  twisted-o1-row.rs  twisted-oneoff.rs  twisted-raw-values.rs
localization/src/: algebra.rs  bounded_cache.rs  error.rs  factored.rs  frobenius.rs  fused.rs  geometry.rs  givental.rs  graphs.rs  growi_oracle.rs  lib.rs  localization.rs  resolvent.rs  series.rs  tautological.rs  testsuite.rs  theory.rs  twisted.rs  validation.rs
localization/src/constraints/: mod.rs
localization/src/constraints/virasoro/: ast.rs  compat.rs  evaluator.rs  generator.rs  mod.rs  notation.rs  qrr.rs  render.rs  report.rs  scan.rs  specialization.rs
localization/src/core/: algebra.rs  error.rs  fused.rs  mod.rs  moduli.rs  series.rs  theory.rs
localization/src/formula/: README.md  atoms.rs  basis.rs  expansion.rs  mod.rs  skeleton.rs  specialization.rs
localization/src/givental/: bundle.rs  classical_limit.rs  graph.rs  matrices.rs  product.rs  provider.rs  r_solve.rs  recipe.rs  target.rs  tests.rs
localization/src/givental/graph/: tests.rs
localization/src/givental/recipe/: cone_point.rs
localization/src/reconstruction/: birkhoff.rs  cyclic.rs  h_laurent.rs  interpolation.rs  linear.rs  mod.rs  series_matrix.rs  truncation.rs
localization/src/spaces/: conformance_tests.rs  mod.rs
localization/src/spaces/negative_split_projective/: calibration.rs  completion.rs  hypergeometric.rs  i_function.rs  mirror.rs  mod.rs  numeric.rs  provider.rs  tests.rs  theory.rs  twist.rs  virasoro.rs
localization/src/spaces/product_projective/: mod.rs  provider.rs  theory.rs  virasoro.rs
localization/src/symbolic/: README.md  mod.rs  projective.rs  quotient.rs  univariate.rs
localization/src/twisted/: birkhoff_factor.rs  hypergeometric.rs  mirror.rs  provider.rs  tests.rs
localization/src/validation_backends/: growi.rs  local_cy.rs  mod.rs  zinger.md  zinger.rs
localization/tests/: oracle_provenance.rs  public_api_compat.rs  verified_examples.rs
(+21 files in other folders)
