[package]
name = "gw-pn"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
description = "Exact Gromov-Witten computations and Virasoro audits for projective targets."
readme = "README.md"
repository = "https://github.com/honglu2875/GWAI"

[lib]
name = "gw_pn"
path = "src/lib.rs"

[[bin]]
name = "gw-pn"
path = "src/bin/gw-pn.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
rug = { version = "1.30", optional = true, default-features = false, features = ["rational", "std"] }

[features]
default = []
gmp-rational = ["dep:rug"]

[lints.clippy]
# This crate is heavy on exact symbolic algebra: loop indices routinely carry
# mathematical meaning (degrees, color/marking indices), and some graph-kernel
# builders inherently take many parameters. These pedantic style lints fight the
# domain, so they are allowed crate-wide while CI denies every other warning.
needless_range_loop = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[profile.release]
codegen-units = 1
lto = "thin"
debug = true
